refactor: limpiar y simplificar RecomendacionesService